--- a/scss/componentes/_contacto.scss
+++ b/scss/componentes/_contacto.scss
@@ -2,153 +2,151 @@
 
 .contacto-page {
   @media screen and (max-width: 1200px) {
-  max-width: 100%;
+    max-width: 100%;
   }
+
   @media screen and (max-width: 571px) {
     font-size: 14px;
   }
 
-.contacto-tit {
-  background-color: nth($colores,8 );
-  color: nth($colores, 7);
-  font-weight: bold;
-  border-radius: 20px;
-  font-size: 1.5em;
-  text-align: center;
-  padding: 0.4em;
-  border-bottom: 1px solid gray;
-  margin-top: 1em;
-}
-
-.item_contacto {
-  @include ubicacion (flex, start, "", "");
-  padding-top: 0.8em;
-  padding-left: 2.5em;
-  @media screen and (max-width: 576px) {
-    padding-left: 6em;
-    
-  }
-
-  img {
-    margin-right: 0.5em;
-  }
-
-  .wp-n {
-    padding-right: 1em;
-  }
-}
-
-.item_redes {
-  @include ubicacion (flex, center, "", "");
-  padding: 0.4rem;
-
-  a {
-    align-items: center;
-    padding: 0.4rem;
-    text-decoration: none;
-    color: black;
-  }
-
-  .r-instagram {
-    text-align: start;
-
-    &:hover {
-      color: map-get($redes, instagram);
-      text-align: start;
-    }
-  }
-
-  .r-facebook {
-    text-align: start;
-
-    &:hover {
-      color: map-get($redes, facebook);
-      text-align: start;
-    }
-  }
-}
-
-  
-.mapa {
-  width: 100%;
-  height: auto;
-}
-
-/* form  */
-
-.form-container {
-  @include ubicacion (flex, "", center, column);
-  background-color: rgb(226, 225, 225);
-  border-radius: 20px;
-
-  .form-tit {
-    text-align: center;
-    border-color: 1px solid rgb(228, 223, 223);
-    border-radius: 3px;
-    margin: 0.5em 0;
-    padding: 0.4em;
+  .contacto-tit {
+    background-color: nth($colores, 7);
+    color: nth($colores, 6);
+    font-weight: bold;
+    border-radius: 20px;
     font-size: 1.5em;
+    text-align: center;
+    padding: 0.4em;
+    border-bottom: 1px solid nth($colores, 8);
+    margin-top: 1em;
   }
 
-  .contacto-form {
-    border: 1px solid rgb(228, 223, 223);
-    border-radius: 3px;
-    width: 80%;
-    margin: 0 0 1.5em 0;
+  .item_contacto {
+    @include ubicacion (flex, start, "", "");
+    padding-top: 0.8em;
+    padding-left: 2.5em;
 
-    .form-row {
-      @include ubicacion (flex, flex-start, "", column);
-      flex-wrap: wrap;
-      margin-bottom: 0.8em;
+    @media screen and (max-width: 576px) {
+      padding-left: 6em;
+    }
 
-      label {
-        margin-bottom: 0.5em;
+    img {
+      margin-right: 0.5em;
+    }
+
+    .wp-n {
+      padding-right: 1em;
+    }
+  }
+
+  .item_redes {
+    @include ubicacion (flex, center, "", "");
+    padding: 0.4rem;
+
+    a {
+      align-items: center;
+      padding: 0.4rem;
+      text-decoration: none;
+      color: black;
+    }
+
+    .r-instagram {
+      text-align: start;
+
+      &:hover {
+        color: map-get($redes, instagram);
+        text-align: start;
       }
+    }
 
-      input[type="text"],
-      input[type="email"],
-      input[type="number"] {
-        background-color: white;
-        border: 1px solid rgb(163, 163, 167);
-        border-radius: 3px;
-        width: 100%;
-        padding: 8px;
+    .r-facebook {
+      text-align: start;
+
+      &:hover {
+        color: map-get($redes, facebook);
+        text-align: start;
       }
+    }
+  }
 
-      textarea {
-        background-color: white;
-        border: 1px solid rgb(163, 163, 167);
-        border-radius: 3px;
-        margin-bottom: 0.5em;
-        padding: 7px;
-        min-height: 100px;
-        min-width: 100%;
-        resize: none
-      }
+  .mapa {
+    width: 100%;
+    height: auto;
+  }
 
-      .instructions {
-        color: rgb(109, 107, 107);
+  /* form  */
+
+  .form-container {
+    @include ubicacion (flex, "", center, column);
+    background-color: rgb(226, 225, 225);
+    border-radius: 20px;
+
+    .form-tit {
+      text-align: center;
+      border-radius: 3px;
+      margin: 0.5em 0;
+      padding: 0.4em;
+      font-size: 1.5em;
+    }
+
+    .contacto-form {
+      border-radius: 3px;
+      width: 80%;
+      margin: 0 0 1.5em 0;
+
+      .form-row {
+        @include ubicacion (flex, flex-start, "", column);
+        flex-wrap: wrap;
         margin-bottom: 0.8em;
-      }
 
-      button {
-        font-weight: bold;
-        color: white;
-        background-color: rgb(100, 157, 204);
-        border: none;
-        border-radius: 3px;
-        padding: 0.8em 1em;
-        cursor: pointer;
-
-        &:hover {
-          background-color: rgb(131, 171, 243);
+        label {
+          margin-bottom: 0.5em;
         }
 
-        &:active {
-          background-color: rgb(76, 132, 238);
+        input[type="text"],
+        input[type="email"],
+        input[type="number"] {
+          background-color: white;
+          border: 1px solid rgb(163, 163, 167);
+          border-radius: 3px;
+          width: 100%;
+          padding: 8px;
+        }
+
+        textarea {
+          background-color: white;
+          border: 1px solid rgb(163, 163, 167);
+          border-radius: 3px;
+          margin-bottom: 0.5em;
+          padding: 7px;
+          min-height: 100px;
+          min-width: 100%;
+          resize: none
+        }
+
+        .instructions {
+          color: rgb(109, 107, 107);
+          margin-bottom: 0.8em;
+        }
+
+        button {
+          font-weight: bold;
+          color: white;
+          background-color: rgb(100, 157, 204);
+          border: none;
+          border-radius: 3px;
+          padding: 0.8em;
+          cursor: pointer;
+
+          &:hover {
+            background-color: rgb(77, 144, 199);
+          }
+
+          &:active {
+            background-color: rgb(54, 117, 168);
+          }
         }
       }
     }
   }
-}
 }
