--- a/scss/componentes/_nosotras.scss
+++ b/scss/componentes/_nosotras.scss
@@ -6,11 +6,10 @@
 
   h2 {
     font-size: 2.5em;
-    font-weight: bold;
     text-align: center;
     padding: 0.5em 0em;
     border-bottom: 1px solid gray;
-    margin: 0.8em
+    margin: 0.5em
   }
 
   .nos_portada_art {
@@ -24,21 +23,23 @@
     }
 
     @media screen and (max-width: 990px) {
-      width: 70%;
+      width: 90%;
       margin: auto;
-      font-size: 14px;
     }
 
     @media screen and (max-width: 770px) {
       width: 90%;
       margin: auto;
-      font-size: 12px;
       padding: 0em;
     }
   }
+  @media screen and (max-width: 576px) {
+    font-size: 14px;
+  }
 }
 
-.cont-colum {
+
+.descripcion-nos {
   @include ubicacion (flex, "", center, column);
 
   img {
@@ -54,29 +55,27 @@
       transform: scale(1.1);
     }
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 576px) {
       width: 80%;
     }
   }
 
-  .nos_main_art {
-    // width: 90%;
+  .nos_text {
     padding: 4em 3em 0em 3em;
     margin: 0em 5em 1em 5em;
-    border: 2px solid gray;
+    border: 3px solid nth($colores, 4);
 
     @media screen and (max-width: 1200px) {
       margin: 0em 3em 1em 3em
     }
 
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 576px) {
       margin: 0em 0.5em 1em 0.5em;
-      padding: 3em 1em 0em 1em;
+      padding: 4em 1em 0em 1em;
+      font-size: 14px;
+
     }
   }
 }
-
-
-
 
 /* ------------------------------ fin nosotras ------------------------------ */
