--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -3,11 +3,7 @@
   padding: 0;
 }
 
-
-
-@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Open+Sans:ital,wght@1,600;1,700&family=Poppins:wght@300&family=Raleway&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Open+Sans:ital,wght@1,600&family=Poppins:wght@300;600&family=Raleway&display=swap');
 
 body {
   font-family: 'Raleway', sans-serif;
@@ -20,14 +16,15 @@ h2, h3, h4 { font-family: 'Poppins', sans-serif; }
 
 // variable colores 
 
-$colores: #747c58,
+$colores:
+#747c58,
 rgb(243, 243, 225),
 rgb(219, 206, 161),
 #a3a59e77,
 rgb(148, 138, 138),
-#575253,
 #61584f,
-#e9e5d5;
+#e9e5d5,
+#575253;
 
 // Mapas
 
@@ -35,18 +32,17 @@ $redes: (instagram: rgba(208, 34, 214, 0.973),
   facebook: rgba(33, 108, 221, 0.973),
 );
 
-
 // extends 
 
 %boton {
-  background-color: rgb(148, 138, 138);
+  background-color: nth($colores, 5);
   border-radius: 5%;
   color: white;
   border: none;
   transition: all 1s;
 
   &:hover {
-    background-color: rgb(219, 206, 161);
+    background-color: nth($colores, 3 );
     color: white;
     transform: scale(1.1);
   }
