--- a/scss/componentes/_+info.scss
+++ b/scss/componentes/_+info.scss
@@ -10,7 +10,6 @@
 
   h2 {
     font-size: 2.5em;
-    font-weight: bold;
     text-align: center;
     padding: 0.5em 0em;
     border-bottom: 1px solid gray;
@@ -22,14 +21,23 @@
   }
 
   .text-naturaleza {
-    margin: 0em 8em 2em 8em;
+    margin: 0em 8em 2em 8em; 
 
+    p { 
+      font-size: 1.1em;
+    } 
+    img { 
+      padding-left: 1em;
+    }
+    @media screen and (max-width: 991px) {
+      margin: 0em 7em 2em 7em;
+    }
     @media screen and (max-width: 570px) {
       margin: 0em 2em 2em 2em;
     }
   }
 
-  .container {
+  .acordeon-info {
     margin-bottom: 3em;
 
     .text-acordeon {
@@ -73,10 +81,10 @@
 
       .main_art {
         width: 90%;
-        display: flex;
-        flex-direction: column;
+        @include ubicacion (flex, "", "", column);
         justify-self: center;
         align-self: center;
+
         a { color: nth($colores,1)}
       }
 
@@ -99,10 +107,10 @@
         line-height: 1.5em;
       }
     }
-
+ 
     h4 {
       text-align: center;
-     margin: 1.2em 0em;
+      margin: 1.2em 0em;
     }
 
     .img-fluid {
@@ -112,7 +120,5 @@
     }
   }
 }
-
-
 
 /* ------------------------------ Fin + Info ----------------------------- */
