--- a/scss/componentes/_home.scss
+++ b/scss/componentes/_home.scss
@@ -33,17 +33,7 @@
 
 .body-home {
   position: relative;
-  top: 45rem;
-
-  h2 {
-    font-size: 2.5em;
-    font-weight: 500;
-    text-align: center;
-    padding: 0.5em 0em;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.603);
-    margin-top: 1em;
-    margin-bottom: 1em;
-  }
+  top: 45em;
 
   .container {
     max-width: 72em;
@@ -54,26 +44,28 @@
       margin: auto;
     }
 
-    .first-text {
+    .productos-text {
       @media screen and (max-width: 576px) {
         font-size: 12px;
         padding: 0em 3em;
       }
-      .tit-segunda-section {
+
+      h2 {
         font-family: 'Poppins', sans-serif;
         font-size: 3.75em;
-        line-height: 60px;
-        font-weight: bold
+        font-weight: 600;
+        color: nth($colores, 6)
       }
 
-      .text-imp {
+      .productos-text-p {
         margin-top: 1em;
         font-size: 1.3em;
         font-family: 'Poppins', sans-serif;
+        text-align: start;
       }
 
       .btn {
-        @extend %boton
+        @extend %boton;    
       }
     }
 
@@ -81,7 +73,7 @@
       box-shadow: 0 0 30px 0 rgb(61, 39, 39);
 
       .btn {
-        @extend %boton
+        @extend %boton;
       }
 
       .card-img-top {
@@ -97,10 +89,10 @@
           transform: scale(1.1);
         }
       }
-      @media screen and (max-width: 576px) {
 
-      width: 80%;
-      height: auto;
+      @media screen and (max-width: 576px) {
+        width: 80%;
+        height: auto;
       }
     }
   }
@@ -110,7 +102,18 @@
 
     @media screen and (max-width: 576px) {
       font-size: 12px;
-      margin: 4em 0em;}
+      margin: 4em 0em;
+    }
+
+    h3 {
+      font-size: 2.5em;
+      font-weight: 500;
+      text-align: center;
+      padding: 0.5em 0em;
+      border-bottom: 1px solid rgba(128, 128, 128, 0.603);
+      margin-top: 1em;
+      margin-bottom: 1em;
+    }
 
     .splide__slide img {
       width: 100%;
@@ -133,8 +136,10 @@
   .img_nosotras {
     width: 100%;
     padding: 2em;
+
     @media screen and (max-width: 576px) {
-      padding: 1em;}
+      padding: 1em;
+    }
   }
 }
 
