--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,7 +8,7 @@
 @import "componentes/mayorista";
 @import "componentes/+info";
 @import "componentes/contacto";
-@import "componentes/exito"
+@import "componentes/exito";
 
 
 
