--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -1,3 +1,4 @@
+
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +13,7 @@ body {
   font-size: 16px;
 }
 
-h2, h3, h4 { font-family: 'Poppins', sans-serif; }
+h2, h3, h4 { font-family: 'Poppins', sans-serif;}
 
 // variable colores 
 
@@ -66,4 +67,8 @@ $redes: (instagram: rgba(208, 34, 214, 0.973),
   justify-content: $fila;
   align-items: $columna;
   flex-direction: $direction;
+}
+
+.disclaimer { 
+  visibility: hidden; 
 }
