--- a/scss/base/_footer.scss
+++ b/scss/base/_footer.scss
@@ -79,7 +79,7 @@
 
          .logo-tit-f {
            font-size: 1.5em;
-           color: gray;
+           color: darken(nth($colores, 4), 20%);
            font-family: 'Raleway', sans-serif;
            font-weight: bold;
            align-self: center;
