--- a/scss/base/_header-home.scss
+++ b/scss/base/_header-home.scss
@@ -10,7 +10,7 @@
     background-color: transparent;
 
     .barra {
-        @include ubicacion (flex, center, "", "");
+        @include ubicacion (flex, center, "center", "row");
         max-width: 72rem;
         margin: auto;
 
@@ -18,6 +18,8 @@
             position: relative;
             right: 2em;
             display: flex;
+            
+            a { color: transparent;
 
             .logo-img {
                 width: 4em;
@@ -30,6 +32,7 @@
                 width: 5em;
                 padding: 0.5em 0.5em 1em 0em;
             }
+        }
 
             h1 {
                 color: nth($colores, 3);
