--- a/css/style.css
+++ b/css/style.css
@@ -256,12 +256,6 @@ footer .foot {
   max-width: 1140px;
   margin: auto;
 }
-@media screen and (max-width: 1140px) {
-  footer .foot {
-    max-width: 700px;
-    margin: auto;
-  }
-}
 @media screen and (max-width: 576px) {
   footer .foot {
     display: flex;
@@ -290,7 +284,7 @@ footer .foot .botonera_f ul li a {
   text-decoration: none;
   color: black;
 }
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 660px) {
   footer .foot .botonera_f {
     display: none;
   }
@@ -356,16 +350,19 @@ footer .foot .foot_contacto .foot_contacto_tit {
   text-align: center;
   border-bottom: 1px solid black;
 }
-footer .foot .foot_contacto div .foot_contacto_iconos {
+footer .foot .foot_contacto .box-contacto {
+  margin-left: 2em;
+}
+footer .foot .foot_contacto .box-contacto .foot_contacto_iconos {
   display: flex;
   justify-content: "";
   align-items: center;
   flex-direction: row;
 }
-footer .foot .foot_contacto div .foot_contacto_iconos .icono {
+footer .foot .foot_contacto .box-contacto .foot_contacto_iconos .icono {
   width: 30px;
 }
-footer .foot .foot_contacto div .foot_contacto_iconos h5 {
+footer .foot .foot_contacto .box-contacto .foot_contacto_iconos h5 {
   text-align: center;
   font-size: 1em;
   font-weight: lighter;
@@ -910,6 +907,9 @@ footer .foot .foot_contacto div .foot_contacto_iconos h5 {
   align-items: "";
   flex-direction: "";
   padding: 0.4rem;
+}
+.contacto-page .item_redes img {
+  filter: grayscale(1);
 }
 .contacto-page .item_redes a {
   align-items: center;
