--- a/scss/base/_footer.scss
+++ b/scss/base/_footer.scss
@@ -9,13 +9,10 @@
      max-width: 1140px;
      margin: auto;
 
-     @media screen and (max-width: 1140px) {
-      max-width: 700px;
-      margin: auto;
-    }
+
      @media screen and (max-width: 576px) {
-      @include ubicacion (flex, center, center, column-reverse);  
-    }
+       @include ubicacion (flex, center, center, column-reverse);
+     }
 
      .botonera_f {
        margin: 0em 0.5em;
@@ -42,7 +39,7 @@
          }
        }
 
-       @media screen and (max-width: 576px) {
+       @media screen and (max-width: 660px) {
          display: none;
        }
      }
@@ -75,7 +72,9 @@
              width: 3.12em;
              filter: grayscale(1);
 
-             &:hover { filter: grayscale(0); }
+             &:hover {
+               filter: grayscale(0);
+             }
            }
          }
        }
@@ -109,7 +108,9 @@
          border-bottom: 1px solid black;
        }
 
-       div {
+       .box-contacto {
+         margin-left: 2em;
+
          .foot_contacto_iconos {
            @include ubicacion (flex, "", center, row);
 
