--- a/scss/base/_footer.scss
+++ b/scss/base/_footer.scss
@@ -118,11 +118,11 @@
              width: 30px;
            }
 
-           h5 {
+           a {
              text-align: center;
-             font-size: 1em;
-             font-weight: lighter;
              padding: 0.6rem;
+             text-decoration: none;
+             color: black;
            }
          }
        }
