--- a/scss/base/_header-home.scss
+++ b/scss/base/_header-home.scss
@@ -65,7 +65,7 @@
                 color: nth($colores, 3);
                 font-family: 'Raleway', sans-serif;
                 font-size: 1.8em;
-                font-weight: bold;
+                font-weight: unset;
                 align-self: center;
             }
         }
