--- a/scss/componentes/_contacto.scss
+++ b/scss/componentes/_contacto.scss
@@ -34,8 +34,10 @@
       margin-right: 0.5em;
     }
 
-    .wp-n {
-      padding-right: 1em;
+    a {
+      text-decoration: none;
+      color: black;
+      margin-top: 0.3em
     }
   }
 
